<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_master</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="evencewu@outlook.com">evence</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>vision_opencv</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>radar_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
